--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ footer img:hover {
     }
     
     .video video {
-        max-width: 70%;
+        width: 100%;
     }
     
     .edu-details {
@@ -366,3 +366,10 @@ footer img:hover {
         min-height: 500px;
     }
 }
+@media (max-width: 70%) {
+    .video iframe {
+        width: 70%
+    }
+}
+    
+        
