--- a/style.css
+++ b/style.css
@@ -358,3 +358,18 @@ footer img:hover {
         min-height: 500px;
     }
 }
+.video-container {
+  position: relative;
+  width: 100%;
+  max-width: 800px; 
+  margin: 0 auto; 
+  padding-bottom: 56.25%;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
