--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ footer img:hover {
 }
 
 .video-container iframe {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
